<resources>
    <string name="app_name">ParkNow</string>
    <string name="search_button">Search Here</string>
    <string name="arrival_button">Arrival</string>
    <string name="leaving_button">Leaving</string>
    <string name="info">Information</string>
    <string name="reviews">Reviews</string>
    <string name="help">Help</string>
    <string name="reserve">Reserve</string>
    <string name="booking_actionbar">Secure Checkout</string>
    <string name="pay">Pay and Reserve</string>
    <string name="dateSelect">Arrival Date</string>
    <string name="dateLeaving">Leaving Date</string>
    <string name="strtTime">Arrival Time</string>
    <string name="endTime">Leaving Time</string>
    <string name="destination">Destination</string>
    <string name="price">Total Price:</string>
    <string name="vehicle">Vehicle Details</string>
    <string name="payment">Payment Details</string>
    <string name="total_duration">Total Duration</string>
    <string name="total_price">Total Price</string>





    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
